added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -119,7 +119,9 @@
     "\n",
     "## Demand driver\n",
     "\n",
-    "#### Demand drivers are the factors influencing the purchasing behaviors of businesses and consumers. These drivers can be internal to your company (e.g., prices, marketing budget, or promotions) or external (e.g., weather or competitive activity)."
+    "#### Demand drivers are the factors influencing the purchasing behaviors of businesses and consumers. These drivers can be internal to your company (e.g., prices, marketing budget, or promotions) or external (e.g., weather or competitive activity).\n",
+    "\n",
+    "#### If you have a promotion-driven business, promotions most likely have a massive impact on demand. Because they can be easily tracked and planned, they should be included in your model (figure 14.5)."
    ]
   }
  ],
