--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -1,10 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Mutual Information\n",
+    "\n",
+    "#### Before closing this introductory section on information theory, let’s look at the concept of mutual information. This measure is calculated between two variables, hence the name mutual, and it measures the reduction in uncertainty of a variable given another variable. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
