added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -12,7 +12,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Entropy\n",
+    "\n",
+    "#### Entropy is a metric used to assess how chaotic or random a system is. Entropy describes how uncertain or unpredictable a signal is. The degree of disorder or unpredictability in the system or communication increases as entropy increases."
+   ]
   },
   {
    "cell_type": "markdown",
