added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -70,6 +70,20 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If skewness is between –0.5 and 0.5, the data is considered symmetrical.\n",
+    "- If skewness is between –1.0 and –0.5 or between 0.5 and 1.0, the data is considered mildly skewed.\n",
+    "- If skewness is less than –1.0 or greater than 1.0, the data is considered highly skewed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
