added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -77,7 +77,13 @@
    "source": [
     "- If skewness is between –0.5 and 0.5, the data is considered symmetrical.\n",
     "- If skewness is between –1.0 and –0.5 or between 0.5 and 1.0, the data is considered mildly skewed.\n",
-    "- If skewness is less than –1.0 or greater than 1.0, the data is considered highly skewed."
+    "- If skewness is less than –1.0 or greater than 1.0, the data is considered highly skewed.\n",
+    "\n",
+    "## Kurtosis\n",
+    "\n",
+    "#### The next measure of shape is kurtosis, which is a description of the peakedness or flatness of a distribution relative to a normal distribution. Kurtosis describes the tails of a distribution, in particular, whether the tails are thicker or thinner than those of a normal distribution.\n",
+    "\n",
+    "#### A normal distribution has a kurtosis of 3, which means it is a mesokurtic distribution. If a distribution has a kurtosis greater than 3, it is referred to as leptokurtic, meaning it has a higher peak and fatter tails than a normal distribution. If a distribution has a kurtosis less than 3, it is referred to as platykurtic, meaning it has a flatter peak and thinner tails than a normal distribution."
    ]
   },
   {
