added new model

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -96,7 +96,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Spearman's Rank Correlation\n",
+    "\n",
+    "#### Spearman’s rank correlation is a nonparametric rank correlation that measures the strength of the relationship between the variables. It is suitable for variables that do not follow a normal distribution.\n",
+    "\n",
+    "\n",
+    "#### The first thing to keep in mind is what they measure. Pearson correlation measures the linear relationship (trend) between the variables while Spearman’s rank correlation measures the monotonic trend. The word monotonic refers to moving in the same direction but not exactly at the same rate or magnitude. Also, Spearman’s rank correlation transforms the data to an ordinal type (through the ranks) as opposed to Pearson correlation, which uses the actual values.\n",
+    "\n",
+    "### Autocorrelation\n",
+    "\n",
+    "#### Autocorrelation (also referred to as serial correlation) is a statistical method used to look at the relationship between a given time series and a lagged version of it. It is generally used to predict future values through patterns in data, such as seasonality or trends. Autocorrelation is therefore the values’ relationship with the previous values—for example, comparing each day’s Microsoft stock price to the preceding day and seeing if there is a discernible correlation there.\n",
+    "\n",
+    "## MIC\n",
+    "\n",
+    "#### The maximal information coefficient (MIC) is a nonparametric measure of association between two variables designed to handle large and complex data. It is generally seen as a more robust alternative to traditional measures of correlation, such as Pearson correlation and Spearman’s rank correlation.\n",
+    "\n",
+    "#### The MIC measures the strength of the association between two variables by counting the number of cells in a contingency table that are maximally informative about the relationship between the variables. The MIC value ranges from 0 to 1, with higher values indicating stronger associations. It can handle high-dimensional data and can identify nonlinear relationships between variables."
+   ]
   }
  ],
  "metadata": {
