added new model

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -112,7 +112,30 @@
     "\n",
     "#### The maximal information coefficient (MIC) is a nonparametric measure of association between two variables designed to handle large and complex data. It is generally seen as a more robust alternative to traditional measures of correlation, such as Pearson correlation and Spearman’s rank correlation.\n",
     "\n",
-    "#### The MIC measures the strength of the association between two variables by counting the number of cells in a contingency table that are maximally informative about the relationship between the variables. The MIC value ranges from 0 to 1, with higher values indicating stronger associations. It can handle high-dimensional data and can identify nonlinear relationships between variables."
+    "#### The MIC measures the strength of the association between two variables by counting the number of cells in a contingency table that are maximally informative about the relationship between the variables. The MIC value ranges from 0 to 1, with higher values indicating stronger associations. It can handle high-dimensional data and can identify nonlinear relationships between variables.\n",
+    "\n",
+    "## The Concept of Stationarity\n",
+    "\n",
+    "#### Stationarity is a key concept in statistical analysis and machine learning. Stationarity occurs when the statistical characteristics of the time series (mean, variance, etc.) are constant over time. In other words, no discernable trend is detectable when plotting the data across time.\n",
+    "\n",
+    "\n",
+    "- Check for stationarity using the different statistical tests that you will see in this section.\n",
+    "- If the tests show data stationarity, you are ready to use the data for the algorithms. If the tests show that the data is not stationary, you have to proceed to step 3.\n",
+    "- Subtract every value from the value before it (difference the values).\n",
+    "- Recheck for stationarity using the same tests on the new transformed data.\n",
+    "- If the test shows data stationarity, then you have successfully transformed your data. Otherwise, redo the transformation and check again until you have stationary data.\n",
+    "\n",
+    "#### The first and most basic test is the augmented Dickey—Fuller (ADF) test. This tests for stationarity using hypothesis testing.\n",
+    "\n",
+    "#### The ADF test searches for a unit root in the data. A unit root is a property of nonstationary data, and in the context of time series analysis, it refers to a characteristic of a stochastic process where the series has a root equal to 1. In simpler terms, it means that its statistical properties, such as the mean and variance, change over time. Here’s what you need to know:\n",
+    "\n",
+    "- The null hypothesis assumes the presence of a unit root. This means that if you are trying to prove that the data is stationary, you are looking to reject the null hypothesis (as seen in “Sampling and Hypothesis Testing”).\n",
+    "- The alternative hypothesis is therefore the absence of a unit root and the stationarity of the data.\n",
+    "- The p-value obtained from the test must be less than the significance level chosen (in most cases, it is 5%).\n",
+    "\n",
+    "#### The other test that you must be aware of is the Kwiatkowski–Phillips–Schmidt–Shin (KPSS) test, which is also a statistical test with the aim of determining whether the time series is stationary or nonstationary. However, the KPSS test can detect stationarity in trending time series, which makes it a powerful tool. Trending time series can actually be stationary on the condition they have a stable mean.\n",
+    "\n",
+    "#### The ADF test has a null hypothesis that argues for nonstationarity and an alternative hypothesis that argues for stationarity. The KPSS test has a null hypothesis that argues for stationarity and an alternative hypothesis that argues for nonstationarity."
    ]
   }
  ],
