added new model

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -135,7 +135,9 @@
     "\n",
     "#### The other test that you must be aware of is the Kwiatkowski–Phillips–Schmidt–Shin (KPSS) test, which is also a statistical test with the aim of determining whether the time series is stationary or nonstationary. However, the KPSS test can detect stationarity in trending time series, which makes it a powerful tool. Trending time series can actually be stationary on the condition they have a stable mean.\n",
     "\n",
-    "#### The ADF test has a null hypothesis that argues for nonstationarity and an alternative hypothesis that argues for stationarity. The KPSS test has a null hypothesis that argues for stationarity and an alternative hypothesis that argues for nonstationarity."
+    "#### The ADF test has a null hypothesis that argues for nonstationarity and an alternative hypothesis that argues for stationarity. The KPSS test has a null hypothesis that argues for stationarity and an alternative hypothesis that argues for nonstationarity.\n",
+    "\n",
+    "#### When a nonstationary time series is differenced to make it stationary, memory loss occurs, which is another way of saying that the autocorrelation between the values is greatly reduced, thus removing the trend component and the DNA of the underlying asset. The degree of differencing and the persistence of the autocorrelation structure in the original series determines how much memory loss occurs."
    ]
   }
  ],
