added new model

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -137,7 +137,17 @@
     "\n",
     "#### The ADF test has a null hypothesis that argues for nonstationarity and an alternative hypothesis that argues for stationarity. The KPSS test has a null hypothesis that argues for stationarity and an alternative hypothesis that argues for nonstationarity.\n",
     "\n",
-    "#### When a nonstationary time series is differenced to make it stationary, memory loss occurs, which is another way of saying that the autocorrelation between the values is greatly reduced, thus removing the trend component and the DNA of the underlying asset. The degree of differencing and the persistence of the autocorrelation structure in the original series determines how much memory loss occurs."
+    "#### When a nonstationary time series is differenced to make it stationary, memory loss occurs, which is another way of saying that the autocorrelation between the values is greatly reduced, thus removing the trend component and the DNA of the underlying asset. The degree of differencing and the persistence of the autocorrelation structure in the original series determines how much memory loss occurs.\n",
+    "\n",
+    "#### Trending data may be stationary. Although this characteristic is rare, the KPSS test can detect the stationarity, while the ADF test cannot.\n",
+    "\n",
+    "- y is the dependent variable; it is what you want to forecast\n",
+    "- x is the independent variable; it is what you use as an input to forecast y\n",
+    "- α is the expected value of the dependent variable when the independent variables are equal to zero\n",
+    "- β represents the change in the dependent variable per unit change in the independent variable\n",
+    "- E is the residual or the unexplained variation\n",
+    "\n",
+    "#### The basic linear regression equation states that a dependent variable (what you want to forecast) is explained by a constant, a sensitivity-adjusted variable, and a residual (error term to account for unexplained variations)"
    ]
   }
  ],
