added new model

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/probabilisitic-methods.ipynb
@@ -147,7 +147,15 @@
     "- β represents the change in the dependent variable per unit change in the independent variable\n",
     "- E is the residual or the unexplained variation\n",
     "\n",
-    "#### The basic linear regression equation states that a dependent variable (what you want to forecast) is explained by a constant, a sensitivity-adjusted variable, and a residual (error term to account for unexplained variations)"
+    "#### The basic linear regression equation states that a dependent variable (what you want to forecast) is explained by a constant, a sensitivity-adjusted variable, and a residual (error term to account for unexplained variations)\n",
+    "\n",
+    "## Homoscedasticity\n",
+    "\n",
+    "#### The variance of the residuals (the difference between the predicted and actual values of the dependent variable) should be constant across all levels of the independent variable(s).\n",
+    "\n",
+    "## Normality of the residuals\n",
+    "\n",
+    "#### The residuals should be normally distributed, meaning that the majority of the residuals are close to zero and the distribution is symmetrical."
    ]
   }
  ],
