added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -21,7 +21,9 @@
    "metadata": {},
    "source": [
     "- A linear equation is a representation in which the highest exponent on any variable is one. This means that there are no variables that are raised to the power of two and above. \n",
-    "- A linear equation line is straight when plotted on a chart."
+    "- A linear equation line is straight when plotted on a chart.\n",
+    "\n",
+    "#### Trigonometric functions are mathematical functions used to relate the angles of a right triangle to the ratios of its sides. They have various applications in fields like geometry, physics, engineering, and more. They help analyze and solve problems related to angles, distances, oscillations, and waveforms, among other things."
    ]
   }
  ],
