added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -23,7 +23,15 @@
     "- A linear equation is a representation in which the highest exponent on any variable is one. This means that there are no variables that are raised to the power of two and above. \n",
     "- A linear equation line is straight when plotted on a chart.\n",
     "\n",
-    "#### Trigonometric functions are mathematical functions used to relate the angles of a right triangle to the ratios of its sides. They have various applications in fields like geometry, physics, engineering, and more. They help analyze and solve problems related to angles, distances, oscillations, and waveforms, among other things."
+    "#### Trigonometric functions are mathematical functions used to relate the angles of a right triangle to the ratios of its sides. They have various applications in fields like geometry, physics, engineering, and more. They help analyze and solve problems related to angles, distances, oscillations, and waveforms, among other things.\n",
+    "\n",
+    "#### Euler’s number e is irrational and is the base of the natural logarithm. It has many applications in exponential growth and in hyperbolic functions. \n",
+    "\n",
+    "## Optimization\n",
+    "- In optimization methods like gradient descent, limits can be used to regulate the step size and guarantee convergence to a local minimum.\n",
+    "\n",
+    "## Feature selection\n",
+    "- Limits can be used to rank the significance of various model features and perform feature selection, which can make the model simpler and perform better."
    ]
   }
  ],
