added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -31,7 +31,10 @@
     "- In optimization methods like gradient descent, limits can be used to regulate the step size and guarantee convergence to a local minimum.\n",
     "\n",
     "## Feature selection\n",
-    "- Limits can be used to rank the significance of various model features and perform feature selection, which can make the model simpler and perform better."
+    "- Limits can be used to rank the significance of various model features and perform feature selection, which can make the model simpler and perform better.\n",
+    "\n",
+    "## Sensitivity analysis\n",
+    "- A machine learning model’s sensitivity to changes in input data and its capacity to generalize to new data can be used to examine a model’s behavior."
    ]
   }
  ],
