added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -34,7 +34,10 @@
     "- Limits can be used to rank the significance of various model features and perform feature selection, which can make the model simpler and perform better.\n",
     "\n",
     "## Sensitivity analysis\n",
-    "- A machine learning model’s sensitivity to changes in input data and its capacity to generalize to new data can be used to examine a model’s behavior."
+    "- A machine learning model’s sensitivity to changes in input data and its capacity to generalize to new data can be used to examine a model’s behavior.\n",
+    "\n",
+    "## Limits\n",
+    "- The main aim of limits is to know the value of a function when it’s undefined. But what is an undefined function? When you have a function that gives a solution that is not possible (such as dividing by zero), limits help you bypass this issue in order to know the value of the function at that point. So the aim of limits is to solve functions even when they are undefined."
    ]
   }
  ],
