added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -37,7 +37,9 @@
     "- A machine learning model’s sensitivity to changes in input data and its capacity to generalize to new data can be used to examine a model’s behavior.\n",
     "\n",
     "## Limits\n",
-    "- The main aim of limits is to know the value of a function when it’s undefined. But what is an undefined function? When you have a function that gives a solution that is not possible (such as dividing by zero), limits help you bypass this issue in order to know the value of the function at that point. So the aim of limits is to solve functions even when they are undefined."
+    "- The main aim of limits is to know the value of a function when it’s undefined. But what is an undefined function? When you have a function that gives a solution that is not possible (such as dividing by zero), limits help you bypass this issue in order to know the value of the function at that point. So the aim of limits is to solve functions even when they are undefined.\n",
+    "- The general form of the limit is read as follows: as you approach a along the x-axis (whether from the positive or the negative side), the function f(x) gets closer to the value of L.\n",
+    "- The idea of the limit states that as you lock in and approach a number from either side (negative or positive), the solution of the equation approaches a certain number, and the solution to the limit is that number."
    ]
   }
  ],
