added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Linear-Algebra.ipynb
@@ -41,6 +41,18 @@
     "- The general form of the limit is read as follows: as you approach a along the x-axis (whether from the positive or the negative side), the function f(x) gets closer to the value of L.\n",
     "- The idea of the limit states that as you lock in and approach a number from either side (negative or positive), the solution of the equation approaches a certain number, and the solution to the limit is that number."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MAE is relatively less sensitive to outliers than MSE, and it is often used when the data contains extreme values or when the absolute magnitude of the error is more important than its squared value. On the other hand, as MSE gives more weight to larger errors, it is the go-to loss function when trying to improve the performance of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
