added new models

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Machine-Learning-Time-Series.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Machine-Learning-Time-Series.ipynb
@@ -20,6 +20,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### In simple terms, R² represents the proportion of the dependent variable’s variability that can be attributed to the independent variable(s) included in the model. It provides a measure of how well the regression model fits the observed data. However, it does not indicate the causal relationship between variables or the overall quality of the model. It is also worth noting that R² is the squared correlation between the two variables. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
