added new notes

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
@@ -21,7 +21,15 @@
     "\n",
     "## Forecasting Threshold\n",
     "\n",
-    "#### The forecasting threshold is the minimum required percentage prediction to validate a signal. This means that the forecasting threshold technique is a filter that removes low conviction predictions."
+    "#### The forecasting threshold is the minimum required percentage prediction to validate a signal. This means that the forecasting threshold technique is a filter that removes low conviction predictions.\n",
+    "\n",
+    "## The volatility-based technique\n",
+    "\n",
+    "#### With this technique, you use a volatility indicator such as a rolling standard deviation of prices to set a variable threshold at each time step. This technique has the benefit of using up-to-date volatility information.\n",
+    "\n",
+    "## The statistical technique\n",
+    "\n",
+    "#### With this technique, you look at the real values from the training set (not the test set) and select a certain quantile (e.g., the 75% quantile) as a minimum threshold to validate the signals."
    ]
   }
  ],
