added new notes

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "## The statistical technique\n",
     "\n",
-    "#### With this technique, you look at the real values from the training set (not the test set) and select a certain quantile (e.g., the 75% quantile) as a minimum threshold to validate the signals."
+    "#### With this technique, you look at the real values from the training set (not the test set) and select a certain quantile (e.g., the 75% quantile) as a minimum threshold to validate the signals.\n",
+    "\n",
+    "#### In rolling window cross validation, a fixed-size training window is moved iteratively over the time series data. At each step, the model is trained on the observations within the window and evaluated on the subsequent window. This process is repeated until the end of the data is reached. The window size can be defined based on a specific time duration or a fixed number of observations."
    ]
   }
  ],
