added new notes

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
@@ -31,7 +31,24 @@
     "\n",
     "#### With this technique, you look at the real values from the training set (not the test set) and select a certain quantile (e.g., the 75% quantile) as a minimum threshold to validate the signals.\n",
     "\n",
-    "#### In rolling window cross validation, a fixed-size training window is moved iteratively over the time series data. At each step, the model is trained on the observations within the window and evaluated on the subsequent window. This process is repeated until the end of the data is reached. The window size can be defined based on a specific time duration or a fixed number of observations."
+    "#### In rolling window cross validation, a fixed-size training window is moved iteratively over the time series data. At each step, the model is trained on the observations within the window and evaluated on the subsequent window. This process is repeated until the end of the data is reached. The window size can be defined based on a specific time duration or a fixed number of observations.\n",
+    "\n",
+    "#### In expanding window cross validation, the training set starts with a small initial window and expands over time, incorporating additional data points at each step. The model is trained on the available data up to a specific point and evaluated on the subsequent time period. Similar to the rolling window approach, this process is repeated until the end of the data is reached."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiperiod Forecasting\n",
+    "\n",
+    "#### Multiperiod forecasting (MPF) is a technique that aims to forecast more than just the next period. It aims to generate a path with n periods as defined by the user. There are two ways to approach MPF:\n",
+    "\n",
+    "## Recursive model\n",
+    "- The recursive model uses the prediction as an input for the next prediction. As you may have already guessed, the recursive model may quickly get off track due to the exponentially rising error term from predicting while using predictions as inputs.\n",
+    "\n",
+    "## Direct model\n",
+    "- The direct model trains the model from the beginning into outputting multiple forecasts in their respective time periods. This model is likely to be more robust than the recursive model."
    ]
   }
  ],
