added new notes

--- a/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
+++ b/Deep-Learning-Books/Deep-Learning-W-Finance/Deep-Learning.ipynb
@@ -48,7 +48,13 @@
     "- The recursive model uses the prediction as an input for the next prediction. As you may have already guessed, the recursive model may quickly get off track due to the exponentially rising error term from predicting while using predictions as inputs.\n",
     "\n",
     "## Direct model\n",
-    "- The direct model trains the model from the beginning into outputting multiple forecasts in their respective time periods. This model is likely to be more robust than the recursive model."
+    "- The direct model trains the model from the beginning into outputting multiple forecasts in their respective time periods. This model is likely to be more robust than the recursive model.\n",
+    "\n",
+    "#### The second time series is the Institute for Supply Management’s Purchasing Managers’ Index (ISM PMI), a widely recognized economic indicator in the United States that provides insight into the health of the manufacturing sector and the overall economy. The index is based on a monthly survey of purchasing managers from various industries, including manufacturing, and assesses key factors such as new orders, production, employment, supplier deliveries, and inventories.\n",
+    "\n",
+    "#### The index is reported as a percentage, with a value above 50 indicating expansion in the manufacturing sector and a value below 50 suggesting contraction. A higher PMI typically indicates positive economic growth, while a lower PMI may signal economic slowdown or recessionary conditions. The ISM PMI is closely monitored by policymakers, investors, and businesses as it can offer valuable insights into economic trends and potential shifts in the business cycle.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
