added new models

--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-1-Basics.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-1-Basics.ipynb
@@ -15,10 +15,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- KNNImputer replaces each missing value with the mean of the k-nearest neighbors’ values for that feature. The distance is based on all the available features.\n",
+    "\n",
+    "- IterativeImputer trains a regression model per feature to predict the missing values based on all the other available features. It then trains the model again on the updated data, and repeats the process several times, improving the models and the replacement values at each iteration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
